[package]
name = "calc-lang"
version = "1.0.0"
edition = "2021"
description = "ZEISX - Brutally fast, zero-dep calc language with REPL & TUI"

[lib]
name = "calc"
path = "src/lib.rs"

[[bin]]
name = "repl"
path = "src/bin/repl.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
